# libmpsee

./: .gitmodules
docs/: README  README.BITBANG  README.C  README.GPIO  README.I2C  README.PYTHON  README.SPI
src/: .clang-format  CMakeLists.txt  build_cmake.sh  fast.c  mpsse.c  mpsse.h  mpsse.py  support.c  support.h
src/examples/: CMakeLists.txt  bitbang.c  bitbang.py  ds1305.c  ds1305.py  gpio.c  gpio.py  i2ceeprom.c  i2ceeprom.py  spiflash.c  spiflash.py  spiflashfast.c
src/test/: CMakeLists.txt  test_support.c
